modified jenkinsfile