@@ -20,41 +20,54 @@ pipeline {
         sh 'docker build -t darinpope/java-web-app:latest .'
       }
     }
-    stage("Publish to Nexus Repository Manager") {
-            steps {
-                script {
-                    pom = readMavenPom file: "pom.xml";
-                    filesByGlob = findFiles(glob: "target/*.${pom.packaging}");
-                    echo "${filesByGlob[0].name} ${filesByGlob[0].path} ${filesByGlob[0].directory} ${filesByGlob[0].length} ${filesByGlob[0].lastModified}"
-                    artifactPath = filesByGlob[0].path;
-                    artifactExists = fileExists artifactPath;
-                    if(artifactExists) {
-                        echo "*** File: ${artifactPath}, group: ${pom.groupId}, packaging: ${pom.packaging}, version ${pom.version}";
-                        nexusArtifactUploader(
-                            nexusVersion: 'nexus3',
-                            protocol: 'http',
-                            nexusUrl: '54.234.197.163:8081',
-                            groupId: 'pom.org.springframework.boot',
-                            version: 'pom.0.0.1-SNAPSHOT',
-                            repository: 'maven-repository',
-                            credentialsId: 'NEXUS_CRED',
-                            artifacts: [
-                                [artifactId: 'pom.demo',
-                                classifier: '',
-                                file: artifactPath,
-                                type: pom.packaging],
-                                [artifactId: 'pom.demo',
-                                classifier: '',
-                                file: "pom.xml",
-                                type: "pom"]
-                            ]
-                        );
-                    } else {
-                        error "*** File: ${artifactPath}, could not be found";
-                    }
+    // stage("Publish to Nexus Repository Manager") {
+    //         steps {
+    //             script {
+    //                 pom = readMavenPom file: "pom.xml";
+    //                 filesByGlob = findFiles(glob: "target/*.${pom.packaging}");
+    //                 echo "${filesByGlob[0].name} ${filesByGlob[0].path} ${filesByGlob[0].directory} ${filesByGlob[0].length} ${filesByGlob[0].lastModified}"
+    //                 artifactPath = filesByGlob[0].path;
+    //                 artifactExists = fileExists artifactPath;
+    //                 if(artifactExists) {
+    //                     echo "*** File: ${artifactPath}, group: ${pom.groupId}, packaging: ${pom.packaging}, version ${pom.version}";
+    //                     nexusArtifactUploader(
+    //                         nexusVersion: 'nexus3',
+    //                         protocol: 'http',
+    //                         nexusUrl: '54.234.197.163:8081',
+    //                         groupId: 'pom.org.springframework.boot',
+    //                         version: 'pom.0.0.1-SNAPSHOT',
+    //                         repository: 'maven-repository',
+    //                         credentialsId: 'NEXUS_CRED',
+    //                         artifacts: [
+    //                             [artifactId: 'pom.demo',
+    //                             classifier: '',
+    //                             file: artifactPath,
+    //                             type: pom.packaging],
+    //                             [artifactId: 'pom.demo',
+    //                             classifier: '',
+    //                             file: "pom.xml",
+    //                             type: "pom"]
+    //                         ]
+    //                     );
+    //                 } else {
+    //                     error "*** File: ${artifactPath}, could not be found";
+    //                 }
+    //         }
+    //    }
+    // }
+    stage('Upload to Nexus') {
+    steps {
+        script {
+            withMaven(
+                maven: 'Maven 4.0.0',
+                mavenLocalRepo: 'maven-repository',
+                mavenOpts: '-Xmx1024m -XX:MaxPermSize=512m'
+            ) {
+                sh 'mvn deploy:deploy-file -DgroupId=pom.org.springframework.boot -DartifactId=pom.demo -Dversion=pom.0.0.1-SNAPSHOT -Dpackaging=jar -Dfile=sample.jar -DrepositoryId=maven-repository -Durl=54.234.197.163:8081'
             }
-       }
+        }
     }
+}
     stage('Login') {
       steps {
         sh 'echo $HEROKU_API_KEY | docker login --username=_ --password-stdin registry.heroku.com'
